[gd_scene load_steps=11 format=3 uid="uid://dsfyo4t6pkwbt"]

[ext_resource type="Script" path="res://scripts/credits.gd" id="1_mah5v"]
[ext_resource type="Shader" uid="uid://3ue5432fgb75" path="res://shaders/wave.gdshader" id="2_kyhnv"]
[ext_resource type="Texture2D" uid="uid://cxp8hlu1fmwf0" path="res://assets/Art/Denied.png" id="3_ooihk"]
[ext_resource type="FontFile" uid="uid://tky48g22e3sq" path="res://assets/Fonts/ChixaDemiBold.ttf" id="4_ih6pn"]
[ext_resource type="FontFile" uid="uid://dgjbxd0euk85l" path="res://assets/Fonts/resource.ttf" id="5_7lgdl"]
[ext_resource type="Shader" uid="uid://cwgd766mrjks2" path="res://shaders/screen2.gdshader" id="6_c6kru"]
[ext_resource type="Texture2D" uid="uid://nm4lqpmm0s8e" path="res://assets/Art/exitButton.png" id="6_ooihk"]
[ext_resource type="Texture2D" uid="uid://bo7b7l3c7vsnc" path="res://assets/Art/exitButton_Hover.png" id="7_ih6pn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5em78"]
shader = ExtResource("2_kyhnv")
shader_parameter/lines = 80
shader_parameter/amplitude = 0.25
shader_parameter/frequency = 0.1
shader_parameter/intensity = 0.442
shader_parameter/line_sharpness = 0.5
shader_parameter/line_size = 0.218
shader_parameter/fade = 0.1
shader_parameter/rest_size = -0.2
shader_parameter/edge = 0.05
shader_parameter/speed = 0.5
shader_parameter/color = Color(0, 0.255358, 0.571492, 0.254902)
shader_parameter/dot_matrix = false
shader_parameter/dot_matriz_size = 80
shader_parameter/speech_sim = true
shader_parameter/speech_intensity = 0.8
shader_parameter/progress = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c1t8d"]
shader = ExtResource("6_c6kru")
shader_parameter/scanline_count = 50.0
shader_parameter/scanline_speed = 1.0

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mah5v")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.000525508, 0.0654354, 0.102364, 1)

[node name="ProgressBar" type="ProgressBar" parent="."]
material = SubResource("ShaderMaterial_5em78")
layout_mode = 0
offset_right = 1154.0
offset_bottom = 703.0

[node name="Logo" type="TextureRect" parent="."]
modulate = Color(0, 0.627451, 1, 1)
layout_mode = 0
offset_left = -177.0
offset_top = 54.0
offset_right = 372.0
offset_bottom = 606.0
rotation = -0.404916
scale = Vector2(2.935, 2.935)
texture = ExtResource("3_ooihk")

[node name="Container" type="Control" parent="."]
anchors_preset = 0
offset_left = 240.0
offset_top = 20.945
offset_right = 912.0
offset_bottom = 505.945

[node name="Credits" type="RichTextLabel" parent="Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 169.0
offset_bottom = 100.0
grow_horizontal = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(-0.045, 0)
theme_override_fonts/normal_font = ExtResource("4_ih6pn")
theme_override_font_sizes/normal_font_size = 64
text = "Credits"
horizontal_alignment = 1

[node name="Names" type="RichTextLabel" parent="Container"]
layout_mode = 2
anchor_left = -0.221
anchor_top = 0.142
anchor_right = 1.179
anchor_bottom = 4.128
offset_left = 58.512
offset_top = 15.13
offset_right = -122.288
offset_bottom = -1288.08
scale = Vector2(0.7, 0.7)
theme_override_constants/line_separation = 30
theme_override_fonts/normal_font = ExtResource("5_7lgdl")
theme_override_font_sizes/normal_font_size = 64
text = "Cantara, Paula Mae
Clark, Sophia
Cruz, Liu Jian
Intal, Kyle Ashe Tristan
Sacramento, Lucas Miguel
Santos, Gabriel Micko
Yu, Julian Nite"
fit_content = true
scroll_active = false

[node name="Roles" type="RichTextLabel" parent="Container"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.221
anchor_top = 0.142
anchor_right = 1.179
anchor_bottom = 4.128
offset_left = 362.512
offset_top = 15.13
offset_right = 258.712
offset_bottom = -1258.08
scale = Vector2(0.7, 0.7)
theme_override_constants/line_separation = 30
theme_override_fonts/normal_font = ExtResource("5_7lgdl")
theme_override_font_sizes/normal_font_size = 64
text = "Graphic Design, Asset Making
Lead Graphic Design, Asset Making
Graphic Design, Asset Making
Lead Game Developer, Game Mechanics
Lead Sound Design
Lead Policy Maker
Project Lead, Game Developer
"
fit_content = true
scroll_active = false
horizontal_alignment = 2

[node name="CreditsMusic" type="AudioStreamPlayer" parent="."]

[node name="PostNote" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -82.85
offset_right = 768.0
offset_bottom = 97.15
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.6, 0.6)
theme_override_constants/line_separation = 0
theme_override_fonts/normal_font = ExtResource("5_7lgdl")
theme_override_font_sizes/normal_font_size = 64
text = "Brought to you by CCCISSY.
Thank you so much for playing!"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="Back" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_top = 20.0
offset_right = -34.0
offset_bottom = 52.0
grow_horizontal = 0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("6_ooihk")
texture_hover = ExtResource("7_ih6pn")

[node name="VHS" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_c1t8d")
layout_mode = 0
offset_top = 6.10352e-05
offset_right = 1151.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="SFX" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
pitch_scale = 0.6

[connection signal="finished" from="CreditsMusic" to="." method="_on_credits_music_finished"]
[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
